# djangoLivraria

./: .env  db.sqlite3  livraria.json  pyproject.toml  python-anywhere.txt  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_livro_capa.py  0002_nome.py  0003_autor_delete_nome.py  0004_alter_autor_email.py  0005_alter_autor_options.py  0006_livro.py  0007_livro_autores.py  0008_rename_isbn_livro_isbn_alter_autor_email_and_more.py  0009_alter_autor_email.py
core/models/: autor.py  editora.py  livro.py
core/serializers/: livro.py
livraria/: settings.py  urls.py
livraria/livraria/: settings.py
media/migrations/: 0001_initial.py
